# s2ac-jax

./: .gitignore  pyproject.toml
src/: s2ac_poc.py  s2ac_validation.py  sac_poc.py
src/agent/: agent.py
src/agent/s2ac/: __init__.py  agent.py  s2ac_cfg.py  utils.py
src/agent/s2ac/models/: __init__.py  critic.py  policy.py  target_critic.py
src/agent/s2ac/optimizers/: __init__.py  adamw.py
src/agent/sac/: __init__.py  critic.py  policy.py  target_critic.py
src/environments/: __init__.py  corridor_multimodal.py  simple_multimodal.py
tests/: test_s2ac_benchmark.py  test_s2ac_extended_integration.py  test_s2ac_extended_units.py  test_s2ac_integration.py  test_s2ac_units.py  test_s2ac_utils.py
