[project]
name = "s2ac-jax"
version = "0.1.0"
description = "s2ac implementation in JAX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brax>=0.13.0",
    "gym>=0.26.2",
    "gymnasium[mujoco]>=1.2.1",
    "gymnax>=0.0.9",
    "jax[cuda13]>=0.8.0",
    "mujoco>=3.3.7",
    "mujoco-mjx>=3.3.7",
    "opencv-python>=4.12.0.88",
    "pytest>=8.4.2",
    "skrl[jax]>=1.4.3",
    "tensorboard>=2.20.0",
    "warp-lang>=1.10.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
